--- a/KeyboardGestures.App/App.axaml
+++ b/KeyboardGestures.App/App.axaml
@@ -1,6 +1,12 @@
 <Application xmlns="https://github.com/avaloniaui"             
 			 xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+			 xmlns:fluent="clr-namespace:Avalonia.Themes.Fluent;assembly=Avalonia.Themes.Fluent"
              x:Class="KeyboardGestures.App.App">
+	<Application.Styles>
+		<fluent:FluentTheme />
+	</Application.Styles>
+	
+	
 	<TrayIcon.Icons>
 		<TrayIcons>
 			<TrayIcon Icon="avares://KeyboardGestures.App/Assets/Icon.png"
